src/index.css
:root {
  --text-shadow-color: #fff;
  --text-main-color: #fff;
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "", "Segoe UI", "Roboto",
    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #212529;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

h1 {
  color: var(--text-main-color);
  font-family: "Times New Roman", sans-serif;
  font-size: 130px;
  font-weight: normal;
  line-height: 48px;
  margin: 0 0 50px;
  text-align: center;
}

p {
  color: #862e9c;
  font-family: "Carme", sans-serif;
  font-size: 16px;
  text-align: center;
}

.container {
  margin: auto;
  max-width: 1048px;
  height: 100vh;
  max-height: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
}
.timer__wrapper {
  border-radius: 24px;
  background-color: var(--text-main-color);
  box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px,
    rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
}
.timer__display {
  padding-left: 1.5em;
}
.timer__display > p {
  font-size: 5em;
}

.button__wrapper {
  display: flex;
  width: 30vw;
  padding: 1em;
  justify-content: center;
  gap: 32px;
  align-items: center;
}
.button {
  color: #fff;
  background-color: #862e9c;
  font-size: 1.5em;
  border-radius: 100vh;
  border: 1px solid #862e9c;
  padding: 1em;
  transition: ease-in-out 0.3s;
}
.button:active {
  border: 1px solid var(--text-main-color);
  background-color: var(--text-main-color);
}
.button:hover {
  transform: scale(120%);
}
.button:disabled {
  background-color: rgb(170, 164, 164);
}
/* .button.active {
  border: 1px solid var(--text-main-color);
  background-color: var(--text-main-color);
} */
@media only screen and (max-device-width: 1280px) {
  * {
    font-size: 0.9em;
  }
  h1 {
    font-size: 60px;
    line-height: 0px;
  }
  .button__wrapper {
    margin: auto;
    width: 100%;
  }
  .timer__display > p {
    font-size: 3.8em;
    padding-left: 0;
  }
}

::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

::-webkit-scrollbar-thumb {
  background: #862e9c;
  border-radius: 20px;
}

